[package]
name = "iced_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.0"
sqlx = { version = "0.7.3", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "json",
]}
