[package]
name = "iced_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
iced = { version = "0.12.0", features = ["debug", "lazy"] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
iced_table = "0.12.0"
